Add Jupyter notebook for data cleaning and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ ENV/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-*.ipynb
+# Allow notebooks in notebooks/ directory
+!notebooks/*.ipynb
 
 # IDE
 .vscode/
